[tool.poetry]
name = "mtf-and-linearity"
version = "0.1.0"
description = ""
authors = ["hobbymarks <ihobbymarks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
ipykernel = "^6.27.1"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
